--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,7 +12,7 @@ html, body {
 	font-family: $font-family_1;
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
+	overflow: auto;
 	overscroll-behavior: auto;
 	height: 100%;
 	width: 100%;
@@ -76,6 +76,9 @@ img {
 	}
 	opacity: 0;
 }
+.content {
+	position: fixed;
+}
 hr {
 	height: .1rem;
 	color: $color_1;
@@ -89,10 +92,6 @@ hr {
 	top: 50%;
 	transform: translate(-50%, -50%);
 	z-index: -1;
-}
-.container {
-	height: 100vh;
-	width: 100vw;
 }
 .nav-wrapper {
 	position: fixed;
